# Structure-From-Motion-Project

./: 1_CameraLib.py  2_Stucture_From_Motion_Given_Image.py  3_Stucture_From_Motion_Custom_Image.py  Config.py  README.md  pyproject.toml
ReferenceCode/: Epipolar_Line.py  EssentialMatrix_Triangulation.py  Estimate_Fundamental_Matrix.py  Extract_Keypoint_SIFT.py  Find_Correspondence.py
output/custom_image/: 3D_points.txt  Essential_matrix.txt  Fundamental_matrix.txt  Intrinsic_parameter_K.txt
output/given_image/: 3D_points.txt  Essential_matrix.txt  Fundamental_matrix.txt
